testsuite/bsc.evaluator/undefined/AbstractDerivePosition.bsv
(* synthesize *)
module mkAbstractDerivePosition();
   primError(?,"should not see");
endmodule
